# leaf-disease-detection

./: .dockerignore  HF_SPACE_SETUP.md  README.md
.github/workflows/: sync_to_hf.yml
client/: .env.example  INSTALL.md  README.md  next.config.ts  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/analysis/: page.tsx
client/src/app/auth/login/: page.tsx
client/src/app/auth/signup/: page.tsx
client/src/app/components/auth/: Login.tsx  (+1 more)
client/src/app/dashboard/: page.tsx
client/src/app/providers/: AuthProvider.tsx  ReduxProvider.tsx  index.tsx
client/src/app/utils/: api.ts  formValidation.ts  index.ts
client/src/components/analysis/: analysis-history.tsx  analysis-result-viewer.tsx  care-tips.tsx  image-analysis.tsx  symptoms-analysis.tsx
client/src/components/ui/: file-input.tsx  loader.tsx  markdown-viewer.tsx
client/src/lib/: analysis-service.ts
client/src/lib/redux/: hooks.ts  index.ts  store.ts
client/src/styles/: markdown.css
client/src/types/: analysis.ts  index.ts
server/: .Dockerfile  .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  pyproject.toml  requirements.txt
server/app/: classification_report_generator.ipynb  main.py
server/app/api/: main.py
server/app/api/routes/: analysis.py  authentication.py  home.py  private.py  rag.py  users.py  utils.py
server/app/core/: config.py  security.py
server/app/db/: __init__.py  db.py
server/app/llm_core/: __init__.py  ensemble.py  gemini_model.py  model_selector.py  openrouter_model.py  utils.py
server/app/middleware/: __init__.py  auth.py
server/app/models/: analysis.py  users.py
server/app/rag_core/: __init__.py  chroma_client.py  data_seeds.py  embeddings.py  langgraph_workflow.py  rag_service.py  retrieval.py
server/app/utils/: auth.py  image_hashing.py  image_preprocessing.py  weather.py
server/uploads/images/: .gitkeep
(+6 files in other folders)
