[project]
name = "fastapi-template-server"
version = "0.1.0"
description = "FastAPI + MongoDB template backend with authentication and modern Python best practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.14.0",
]
