[project]
name = "leaf-disease-detection-server"
version = "0.1.0"
description = "AI-powered leaf disease detection system using Gemini Vision API with FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.14.0",
    "langchain-google-genai>=2.0.8",
    "pillow>=10.0.0",
    "python-multipart>=0.0.20",
    "aiofiles>=25.1.0",
]
