[project]
name = "leaf-disease-detection-server"
version = "0.1.0"
description = "AI-powered leaf disease detection system using Gemini Vision API with FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.14.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.20",
    "aiofiles>=25.1.0",
    "pandas>=2.0.0",
    "langchain>=1.1.0",
    "notebook>=7.5.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "chromadb>=1.5.2",
    "langchain-openai>=1.1.11",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "openmeteo-requests>=1.3.0",
    "ImageHash>=4.3.1",
    "scipy>=1.11.0",
]
